--- a/index.html
+++ b/index.html
@@ -184,6 +184,51 @@
         logTest('Val Method', value === 'test-value');
     }
 
+    // Test 12: Validation
+    function testValidation() {
+        const input = fritos("input[name='input-1']");
+        const validationResult = input.validation({
+            required: true,
+            minLength: 3,
+            pattern: "^[a-zA-Z]+$"
+        });
+
+        logTest('Validation Method',
+            validationResult.valid === false &&
+            validationResult.errors.includes("Minimum length is 3 characters"),
+            validationResult.errors.join(', ')
+        );
+    }
+
+    // Test 13: Hide Method
+    function testHide() {
+        const element = fritos(".moveable-item");
+        element.hide();
+        const isHidden = getComputedStyle(element.elements[0]).display === "none";
+        logTest('Hide Method', isHidden);
+    }
+
+    // Test 14: Prune Method
+    function testPrune() {
+        // Clone a test container to ensure the test is repeatable
+        const container = document.getElementById('test-container');
+        const clonedContainer = container.cloneNode(true);
+        clonedContainer.id = "test-container-prune";
+        document.body.appendChild(clonedContainer);
+
+        const items = fritos("#test-container-prune .item");
+        items.prune();
+
+        const newParents = fritos("#test-container-prune .item-image").parent();
+        logTest('Prune Method',
+            newParents.elements.every(parent => parent.classList.contains('items'))
+        );
+
+        // Cleanup the cloned test container
+        clonedContainer.remove();
+    }
+    
+
     // Run all tests
     async function runTests() {
         testQuerySelector();
@@ -197,6 +242,9 @@
         testRaise();
         testAttrs();
         testVal();
+        testValidation();
+        testHide();
+        testPrune();
     }
 
     // Run tests when page loads
